# Zen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  Log.md  Log.txt  README.md  main.cpp  nucleus.cpp  readme.md  readme.txt  todo.txt  zen-design-ledger.md
Examples/: CMakeLists.txt  TimerExamples.cpp  Vector2Examples.cpp
ExamplesAndTests/: CMakeLists.txt
examples/: CMakeLists.txt  anything_storage_examples.cpp  heartbeat.cpp  heartbeat_authored.cpp  message_bus_example.cpp  quickstart.cpp  timer_examples.cpp  var_storage_examples.cpp  vector2_examples.cpp
include/: Camera.h  Collision2D.h  Collision3D.h  Color.h  GameGraphics.h  GameState.h  GameStateManager.h  Line2D.h  PlaneBounded.h  Rectangle.h  Renderer.h  Timer.h  Vector2.h  Vector3.h  Window.h
include/zen/: admission.hpp  author.hpp  gate.hpp  kind.hpp  registry.hpp  schema.hpp  serialize.hpp  switchboard.hpp  value.hpp  zen.hpp
include/zen/author/: shape.hpp  shard.hpp
include/zen/isolation/: channel.hpp  host.hpp  protocol.hpp  sandbox.hpp
include/zen/kernel/: abi.h  control.hpp  export.hpp  kernel.hpp  schema_codec.hpp
include/zen/switchboard/: bus.hpp  grant.hpp  message.hpp  shard.hpp  switchboard.hpp
sdl_c_make_files/: readme.md
src/: CMakeLists.txt  Camera.cpp  Collision2D.cpp  Color.cpp  GameGraphics.cpp  GameStateManager.cpp  Line2D.cpp  PlaneBounded.cpp  Rectangle.cpp  Renderer.cpp  Timer.cpp  Vector2.cpp  Vector3.cpp  Window.cpp  anything_storage.h  callback.h  collision2d.cpp  collision2d.h  collision3d.h  collision_2d.cpp  collision_2d.h  console.h  data_packet.h  gate.cpp  logger.cpp  logger.h  message.h  message_bus.h  message_listener.h  registry.cpp  rttr_wrapper.h  schema.cpp  serialize.cpp  timer.cpp  timer.h  value.cpp  var_storage.h  zsignal.h  zsingal.h
src/collision/: .main.cpp.swp  Main-psycho.cpp  main.cpp
src/detail/: base64.cpp  base64.hpp  binary.cpp  binary.hpp  gate_internal.hpp  hash.hpp  json.cpp  json.hpp
src/graphics/: camera.cpp  camera.h  drawable.h  enums.h  game_graphics.cpp  game_graphics.h  particle.h  renderer.cpp  renderer.h  sprite.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  window.cpp  window.h
src/graphics/user_interface/: custom_layout.cpp  custom_layout.h
src/graphics_3d/: camera.cpp  camera.h  engine_3d.cpp  engine_3d.h
src/input/: input.cpp  input.h
src/isolation/: channel.cpp  host.cpp  sandbox.cpp  shard_host_main.cpp
src/kernel/: kernel.cpp
src/logic/: math.cpp  math.h  utils.h
src/message_bus/: data_packet.h  message.h  message_bus.h  message_listener.h  socket.h  var_storage.h
src/state_management/: game_state.cpp  game_state.h  game_state_manager.cpp  game_state_manager.h
src/switchboard/: switchboard.cpp
src/types/: color.cpp  color.h  function.h  line2d.cpp  line2d.h  line_2d.cpp  plane_bounded.cpp  plane_bounded.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/types/3d/: line_3d.cpp  line_3d.h  shape.cpp  shape.h  sphere.cpp  sphere.h  triangle.h
src/user_interface/: button.cpp  button.h  custom_layout.cpp  custom_layout.h  drop_down.cpp  drop_down.h  engine_config.json  scroll_view.cpp  scroll_view.h  text.cpp  text.h  text_box.cpp  text_box.h
src/utility_states/: build_state.cpp  build_state.h
tests/: CMakeLists.txt  doctest_main.cpp  fixtures.hpp  run-under-scope.sh  switchboard_fixtures.hpp  test_author_shape.cpp  test_author_shard.cpp  test_breathing.cpp  test_capabilities.cpp  test_compat.cpp  test_fuzz.cpp  test_gate.cpp  test_harness.cpp  test_integration.cpp  test_isolation.cpp  test_kernel.cpp  test_registry.cpp  test_schema.cpp  test_schema_codec.cpp  test_serialize.cpp  test_switchboard.cpp  test_value.cpp
tests/shardlib/: bad_abi.cpp  test_shard.cpp
